--- a/portfolio.html
+++ b/portfolio.html
@@ -338,8 +338,8 @@
         <div class="container">
             <div class="flex-center">
                 <div class="title text-center " style="max-width: 630px;">
-                    <p class="mb-0 text-secondary">Latest Portfolio</p>
-                    <h2>Exploring Minds Elementary School Education the only school</h2>
+                    <p class="mb-0 text-secondary wow animate__fadeInUp">Latest Portfolio</p>
+                    <h2 class="wow animate__fadeInUp">Exploring Minds Elementary School Education the only school</h2>
                 </div>
             </div>
             <div class="pt-5">
@@ -352,27 +352,27 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="pills-School-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-School" type="button" role="tab" aria-controls="pills-School"
-                            aria-selected="false" tabindex="-1">School</button>
+                            aria-selected="false">School</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="pills-Learn-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-Learn" type="button" role="tab" aria-controls="pills-Learn"
-                            aria-selected="false" tabindex="-1">Learn</button>
+                            aria-selected="false">Learn</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="pills-Child-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-Child" type="button" role="tab" aria-controls="pills-Child"
-                            aria-selected="false" tabindex="-1">Child</button>
+                            aria-selected="false">Child</button>
                     </li>
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="pills-Coaching-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-Coaching" type="button" role="tab" aria-controls="pills-Coaching"
-                            aria-selected="false" tabindex="-1">Coaching</button>
+                            aria-selected="false">Coaching</button>
                     </li>
                 </ul>
             </div>
 
-            <div class="tab-content" id="pills-tabContent">
+            <div class="tab-content wow animate__fadeInUp" id="pills-tabContent" data-wow-delay=".3s">
                 <div class="tab-pane fade show active" id="pills-Education" role="tabpanel"
                     aria-labelledby="pills-Education-tab" tabindex="0">
                     <div class="row pt-5">
@@ -794,12 +794,13 @@
                     </div>
                     <div class="col-xl-6 order-1 order-xl-2">
                         <div class="title" style="max-width: 630px;">
-                            <p class="mb-0 text-muted">Get Connected</p>
-                            <h2>Education That Sparks Imaginat Nurturing Curiosity Inspire</h2>
+                            <p class="mb-0 text-muted wow animate__fadeInUp">Get Connected</p>
+                            <h2 class=" wow animate__fadeInUp">Education That Sparks Imaginat Nurturing Curiosity
+                                Inspire</h2>
                         </div>
                         <div class="position-relative  mt-5">
                             <input type="text" placeholder="Enter Your Email"
-                                class="rounded-3 border  ps-3 py-4  w-100 ">
+                                class="rounded-3 border  ps-3 py-4  w-100 " />
                             <button style="right: 10px;"
                                 class="btn px-4 py-3 rounded-3 bg-primary text-white btn-animate btn-animate-green  position-absolute  top-50 absolute-y-center d-flex gap-3 align-items-center"><span>Submit</span>
                                 <i class="fa-solid fa-arrow-right"></i></button>
@@ -813,95 +814,109 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-xl-4 mb-4">
-                    <a href="" class="flex items-center gap-1">
-                        <img src="./img/logo.png" alt="img">
-                        <span class="fw-bold fs-2 ">Ascent</span>
-                    </a>
-                    <p class="mt-3">Yes, there are many notable ma corporate the a od businesses Informati worldwide
+                    <div class="wow animate__fadeInUp" data-wow-delay=".3s">
+                        <a href="" class="flex items-center gap-1">
+                            <img src="./img/logo.png" alt="img">
+                            <span class="fw-bold fs-2 ">Ascent</span>
+                        </a>
+                        <p class="mt-3">Yes, there are many notable ma corporate the a od businesses Informati worldwide
 
-                    </p>
-                    <ul class="d-flex align-items-center gap-3 mt-4 list-unstyled">
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-facebook-f "></i></a></li>
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-twitter"></i></a></li>
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="" style="width: 40px;height: 40px;"
-                                class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
-                                    class="fa-brands fa-pinterest-p"></i></a></li>
-                    </ul>
+                        </p>
+                        <ul class="d-flex align-items-center gap-3 mt-4 list-unstyled">
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-facebook-f "></i></a></li>
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a href="" style="width: 40px;height: 40px;"
+                                    class="rounded-3  d-flex align-items-center justify-content-center text-muted-foreground bg-green "><i
+                                        class="fa-brands fa-pinterest-p"></i></a></li>
+                        </ul>
+                    </div>
+
                 </div>
                 <div class="col-sm-6 col-xl-2 mb-4">
-                    <div class="d-inline-block">
-                        <h3 class="fw-semibold">Pages</h3>
-                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
-                            <span
-                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
-                                style="height: 6px; width: 6px;"></span>
-                        </span>
+                    <div class="wow animate__fadeInUp" data-wow-delay=".5s">
+                        <div class="d-inline-block">
+                            <h3 class="fw-semibold">Pages</h3>
+                            <span style="width: 130%; height: 1px;"
+                                class="d-block mt-2 bg-background position-relative ">
+                                <span
+                                    class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                    style="height: 6px; width: 6px;"></span>
+                            </span>
+                        </div>
+
+                        <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages anim-left">
+                            <li><a href="" class="">About Us</a></li>
+                            <li><a href="" class="">Latest Service</a></li>
+                            <li><a href="" class="">Latest Blog And News</a></li>
+                            <li><a href="" class="">FAQ</a></li>
+                            <li><a href="" class="">Our Creative Team Member</a></li>
+                        </ul>
                     </div>
-                    4
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled list-pages anim-left">
-                        <li><a href="" class="">About Us</a></li>
-                        <li><a href="" class="">Latest Service</a></li>
-                        <li><a href="" class="">Latest Blog And News</a></li>
-                        <li><a href="" class="">FAQ</a></li>
-                        <li><a href="" class="">Our Creative Team Member</a></li>
-                    </ul>
+
                 </div>
                 <div class="col-sm-6 col-xl-2 mb-4">
-                    <div class="d-inline-block">
-                        <h3 class="fw-semibold">Contact</h3>
-                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
-                            <span
-                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
-                                style="height: 6px; width: 6px;"></span>
-                        </span>
+                    <div class="wow animate__fadeInUp" data-wow-delay=".7s">
+                        <div class="d-inline-block">
+                            <h3 class="fw-semibold">Contact</h3>
+                            <span style="width: 130%; height: 1px;"
+                                class="d-block mt-2 bg-background position-relative ">
+                                <span
+                                    class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                    style="height: 6px; width: 6px;"></span>
+                            </span>
+                        </div>
+                        <ul class="d-flex flex-column gap-3 pt-3 list-unstyled anim-left">
+                            <li>
+                                <p class="d-flex  align-items-center gap-4">
+                                    <span class="ms-3">1179
+                                        KFC Road, Lisbon, Portugal</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p class="d-flex  align-items-center gap-4">
+                                    <a class="ms-3" href="mailto:Sakib23@gmail.com">Sakib23@gmail.com</a>
+                                </p>
+                            </li>
+                            <li>
+                                <p class="d-flex  align-items-center gap-4">
+                                    <a class="ms-3" href="tel:012547892354">012547892354</a>
+                                </p>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="d-flex flex-column gap-3 pt-3 list-unstyled anim-left">
-                        <li>
-                            <p class="d-flex  align-items-center gap-4">
-                                <span class="ms-3">1179
-                                    KFC Road, Lisbon, Portugal</span>
-                            </p>
-                        </li>
-                        <li>
-                            <p class="d-flex  align-items-center gap-4">
-                                <a class="ms-3" href="mailto:Sakib23@gmail.com">Sakib23@gmail.com</a>
-                            </p>
-                        </li>
-                        <li>
-                            <p class="d-flex  align-items-center gap-4">
-                                <a class="ms-3" href="tel:012547892354">012547892354</a>
-                            </p>
-                        </li>
-                    </ul>
+
                 </div>
                 <div class="col-md-6 col-xl-4 mb-4">
+                    <div class="wow animate__fadeInUp" data-wow-delay=".7s">
+                        <div class="d-inline-block">
+                            <h3 class="fw-semibold " style="white-space: nowrap;">Our Newsletter
+                            </h3>
+                            <span style="width: 130%; height: 1px;"
+                                class="d-block mt-2 bg-background position-relative ">
+                                <span
+                                    class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
+                                    style="height: 6px; width: 6px;"></span>
+                            </span>
+                        </div>
+                        <p class="pt-3">
+                            Subscribe our newsletter to get our latest update
+                        </p>
+                        <div class="position-relative  mt-5">
+                            <input type="text" placeholder="Enter Your Email"
+                                class="rounded-3 border-0 text-white  ps-3 py-3  w-100 " style="background: #FFFFFF1A;">
+                            <button style="right: 10px;"
+                                class="btn px-4 py-2 rounded-3 bg-primary text-white btn-animate btn-animate-green  position-absolute  top-50 absolute-y-center d-flex gap-3 align-items-center">
+                                <i class="fa-solid fa-arrow-right"></i></button>
+                        </div>
+                    </div>
 
-                    <div class="d-inline-block">
-                        <h3 class="fw-semibold " style="white-space: nowrap;">Our Newsletter
-                        </h3>
-                        <span style="width: 130%; height: 1px;" class="d-block mt-2 bg-background position-relative ">
-                            <span
-                                class="position-absolute  end-0 top-50  absolute-y-center  bg-background   rounded-circle"
-                                style="height: 6px; width: 6px;"></span>
-                        </span>
-                    </div>
-                    <p class="pt-3">
-                        Subscribe our newsletter to get our latest update
-                    </p>
-                    <div class="position-relative  mt-5">
-                        <input type="text" placeholder="Enter Your Email"
-                            class="rounded-3 border-0 text-white  ps-3 py-3  w-100 " style="background: #FFFFFF1A;">
-                        <button style="right: 10px;"
-                            class="btn px-4 py-2 rounded-3 bg-primary text-white btn-animate btn-animate-green  position-absolute  top-50 absolute-y-center d-flex gap-3 align-items-center">
-                            <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
 
                 </div>
             </div>
@@ -909,11 +924,12 @@
 
             <div class="row mt-5 pb-4 opacity-75">
                 <div class="col-xl-6">
-                    <p>© Yoursitename 2024 | All Rights Reserved</p>
+                    <p class="wow animate__fadeInLeft" data-wow-delay=".3s">© Yoursitename 2024 | All Rights Reserved
+                    </p>
                 </div>
                 <div class="col-xl-6">
-                    <ul
-                        class="d-flex   justify-content-xl-end align-items-center gap-2 gap-sm-5  fadeInRight list-unstyled">
+                    <ul class="d-flex   justify-content-xl-end align-items-center gap-2 gap-sm-5  fadeInRight list-unstyled wow animate__fadeInRight"
+                        data-wow-delay=".3s">
                         <li><a href="">Trams &amp; Condition</a></li>
                         <li><a href="">Privacy Policy</a></li>
                         <li><a href="">Contact Us</a></li>
